2007-10-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do3d_plot): Fix (another) bug in space allocation
	for key title.  This one was also present in 4.2
	Bug #1817873

	* src/eval.c (pop_or_convert_from_string): Switch from use of atof()
	to strtod() so that we can trap errors in auto-conversion from string
	to number during expression evaluation.

2007-10-23  Christer Lundberg  <ssslub@users.sourceforge.net>

	* term/post.trm: A font name containing spaces must be protected by
	parentheses in PostScript output.

2007-10-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do3d_plot): Fix bug in space allocation for
	key title.
	Bug #1817873

2007-10-23  Ethan Merritt  <merritt@u.washington.edu>

	Add a mechanism to embed figures in TeX-based documentation

	* docs/README docs/doc2???.c: 'F' in first column of gnuplot.gih
	indicates an embedded figure. The text immediately following is the 
	filename of the (pdf) figure. doc2tex emits a suitable \includegraphics
	call, everyone else ignores the whole line.

	* docs/titlpage.tex: Include packages graphicx and picins.

	* docs/plotstyles.gnu docs/histopt.dat: Script to create figures
	illustrating various plot styles.

	* docs/Makefile.in:  New target "make pdffigures".

	* docs/gnuplot.doc:  Expand the section on plot styles, and embed
	suitable figures to illustrate.

	* docs/gnuplot.doc:  Document `set pm3d depthorder`.

	* docs/gnuplot.texi: Sync.

2007-10-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_use_properties): Do not overwrite previously set
	value of pointflag. (Missed one code path in yesterday's patch).

	* src/save.c (save_linetype): Save point properties whether or not
	pointflag is set.

2007-10-20  Ethan Merritt  <merritt@u.washington.edu>

	Patch 1 of 2: Rationalize use of the pointflag Boolean in lp_style_type.
	The current code relies on lp_parse() to set this flag as a side effect,